理解java的三大特性之封装

--- a/_posts/2017-04-26-java提高篇（一）—–理解java的三大特性之封装.md
+++ b/_posts/2017-04-26-java提高篇（一）—–理解java的三大特性之封装.md
@@ -4,17 +4,14 @@
 
 对于封装而言，一个对象它所封装的是自己的属性和方法，所以它是不需要依赖其他对象就可以完成自己的操作。
 
-	使用封装有三大好处：
+使用封装有三大好处：
 
-         1、良好的封装能够减少耦合。
+> * 1、良好的封装能够减少耦合。
+> * 2、类内部的结构可以自由修改。
+> * 3、可以对成员进行更精确的控制。
+> * 4、隐藏信息，实现细节。
 
-         2、类内部的结构可以自由修改。
-
-         3、可以对成员进行更精确的控制。
-
-         4、隐藏信息，实现细节。
-
-	首先我们先来看两个类：Husband.java、Wife.java
+首先我们先来看两个类：Husband.java、Wife.java
       
 ```java
 public class Husband {
@@ -228,8 +225,8 @@ public String getSexName() {
 ```
 
 鄙人才疏学浅，只能领悟这么多了，如果文中有错误之处，望指正，鄙人不胜感激！
- 
- 	本文转自：http://cmsblogs.com/?p=41
+
+本文转自：http://cmsblogs.com/?p=41
 
 
 
