理解java的三大特性之封装

--- a/_posts/2017-04-26-java提高篇（一）—–理解java的三大特性之封装.md
+++ b/_posts/2017-04-26-java提高篇（一）—–理解java的三大特性之封装.md
@@ -226,7 +226,7 @@ public String getSexName() {
 
 鄙人才疏学浅，只能领悟这么多了，如果文中有错误之处，望指正，鄙人不胜感激！
 
-本文转自：http://cmsblogs.com/?p=41
+本文转自：[http://cmsblogs.com/?p=41](http://cmsblogs.com/?p=41)
 
 
 
