理解java的三大特性之继承

--- a/_posts/2017-04-26-java提高篇（一）—–理解java的三大特性之封装.md
+++ b/_posts/2017-04-26-java提高篇（一）—–理解java的三大特性之封装.md
@@ -148,9 +148,9 @@ public class Husband {
 ```
 其他的地方依然那样引用(husband.setAge(22))保持不变。
 
-到了这里我们确实可以看出，封装确实可以使我们容易地修改类的内部实现，而无需修改使用了该类的客户代码。
+到了这里我们确实可以看出，<font color=#0099ff>封装确实可以使我们容易地修改类的内部实现，而无需修改使用了该类的客户代码。</font>
 
-我们在看这个好处：可以对成员变量进行更精确的控制。
+我们在看这个好处：<font color=#0099ff>可以对成员变量进行更精确的控制。</font>
 
 还是那个Husband，一般来说我们在引用这个对象的时候是不容易出错的，但是有时你迷糊了，写成了这样：
       
