理解java的三大特性之继承

--- a/_posts/2017-04-26-java提高篇（二）—–理解java的三大特性之继承.md
+++ b/_posts/2017-04-26-java提高篇（二）—–理解java的三大特性之继承.md
@@ -89,7 +89,7 @@ public class Wife {
 }
 ```
 
- 从这里我们可以看出，Wife、Husband两个类除了各自的husband、wife外其余部分全部相同，作为一个想最大限度实现复用代码的我们是不能够忍受这样的重复代码，如果再来一个小三、小四、小五……（扯远了）我们是不是也要这样写呢？那么我们如何来实现这些类的可复用呢？<font color=#0099ff>利用继承！！</font>
+ 从这里我们可以看出，Wife、Husband两个类除了各自的husband、wife外其余部分全部相同，作为一个想最大限度实现复用代码的我们是不能够忍受这样的重复代码，如果再来一个小三、小四、小五……（扯远了）我们是不是也要这样写呢？那么我们如何来实现这些类的可复用呢？<font color="#0000ff">利用继承！！</font>
  
 首先我们先离开软件编程的世界，从常识中我们知道丈夫、妻子、小三、小四…，他们都是人，而且都有一些共性，有名字、年龄、性别、头等等，而且他们都能够吃东西、走路、说话等等共同的行为，所以从这里我们可以发现他们都拥有人的属性和行为，同时也是从人那里继承来的这些属性和行为的。
 
