理解java的三大特性之继承

--- a/_posts/2017-04-26-java提高篇（二）—–理解java的三大特性之继承.md
+++ b/_posts/2017-04-26-java提高篇（二）—–理解java的三大特性之继承.md
@@ -93,7 +93,7 @@ public class Wife {
  
 首先我们先离开软件编程的世界，从常识中我们知道丈夫、妻子、小三、小四…，他们都是人，而且都有一些共性，有名字、年龄、性别、头等等，而且他们都能够吃东西、走路、说话等等共同的行为，所以从这里我们可以发现他们都拥有人的属性和行为，同时也是从人那里继承来的这些属性和行为的。
 
- 从上面我们就可以基本了解了继承的概念了，<font color=#0099ff>继承是使用已存在的类的定义作为基础建立新类的技术，新类的定义可以增加新的数据或新的功能，也可以用父类的功能，但不能选择性地继承父类。</font>通过使用继承我们能够非常方便地复用以前的代码，能够大大的提高开发的效率。
+ 从上面我们就可以基本了解了继承的概念了，<font color="#0099ff">继承是使用已存在的类的定义作为基础建立新类的技术，新类的定义可以增加新的数据或新的功能，也可以用父类的功能，但不能选择性地继承父类。</font>通过使用继承我们能够非常方便地复用以前的代码，能够大大的提高开发的效率。
  
  对于Wife、Husband使用继承后，除了代码量的减少我们还能够非常明显的看到他们的关系。
 
