--- a/_posts/2017-06-20-MySQL高级----索引.md
+++ b/_posts/2017-06-20-MySQL高级----索引.md
@@ -1,4 +1,4 @@
-## 索引简介 
+## 索引简介
 MySQL 官方对索引的定义：索引（Index）是帮助MySQL高级获取数据的数据结构。
 可以得到索引的本质：“索引是数据结构”，可以简单的理解为：<font color="#FF0000"> “排好序的快速查找数据结构”</font>
 
@@ -97,8 +97,53 @@ show index from table_name
 ⑥Index Full Index Scan，index与All区别为index类型只遍历索引树。这通常比All快，因为索引文件通常比数据文件小。（也就是说虽然All和Index都是读全表，但是Index是从索引中读取，而All是从硬盘中读的）
 ⑦All Full Table Scan，建遍历全表以找到匹配的行
 <font color="#FF0000">备注：一般来说，得保证查询至少达到range级别，最好能达到ref</font>
-> * possible_keys
-> * key
-> * key_len
-> * ref
-> * rows
+> * possible_keys 显示可能应用在这张表中的索引，一个或多个。查询涉及到的字段上若存在索引，则该索引将被列出，<font color="#FF0000">但不一定被查询实际使用</font>
+> * key 实际使用的索引。如果为NULL，则没有使用索引。查询中如使用了覆盖索引，则该索引仅出现在key列表中
+> * key_len 表示索引中使用的字节数，可通过该列计算查询中使用的索引的长度。在不损失精确性的情况下，长度越短越好。key_len显示的值为索引字段的最大可能长度，<font color="#FF0000">并非实际使用长度</font>，即ken_len是根据表定义计算而得，不是通过表内检索出的
+> * ref 显示索引的那一列被使用了，如果可能的话，是一个常数。那些列或者常量被用于查找索引列上的值
+> * rows 根据表统计信息及索引选用情况，大致估算出找到所需要的记录所需要读取的行数
+> * Extra 包含不合适在其他列中显示但十分重要的额外信息
+① Using filesort 说明MySQL会对数据使用一个外部的索引排序。而不是按照表内的索引顺序进行读取。MySQL中无法利用索引完成的排序操作称为“文件排序”
+② Using temporary 使用了临时表保存中间结果，MySQL在对查询结果排序时使用临时表。常见于排序order by 和分组查询group by
+③ Using Index 表示响应的select操作中使用了覆盖索引（Covering Index），避免访问了表的数据行，效率不错！如果同事出现using where 表示索引被用来执行索引键值的查找
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621171826.png)
+覆盖索引Covering Index
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621172258.png)
+④ Using where 表明使用了where过滤
+⑤ Using join buffer  表名使用了连接缓存
+⑥ impossible where where子句的值总是false，不能用来获取任何元组
+explain select * from t1 where name ='a' and name ='b';
+⑦ select tables optimized away 在没有group by子句的情况下，基业索引优化min/max操作或者对应MyISAM存储引擎优化COUNT（*）操作，不必等到执行阶段再进行计算，查询执行计划生成的阶段即完成优化
+⑧ dictinct 优化distinct操作，在找到第一匹配的元组后即停止找同样值的动作
+### 热身Case
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621173615.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621173713.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621174022.png)
+
+## 索引优化
+> * 索引分析
+①单表
+--建表sql
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621174815.png)
+--案例
+②两表
+--建表sql
+--案例
+③三表
+--建表sql
+--案例
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621175542.png)
+> * 索引失效（应该避免）
+①
+②
+③
+④
+⑤
+⑥
+> * 一般性建议
+①
+②
+③
+④
+⑤
+⑥
