--- a/_posts/2017-06-20-MySQL高级----索引.md
+++ b/_posts/2017-06-20-MySQL高级----索引.md
@@ -125,25 +125,86 @@ explain select * from t1 where name ='a' and name ='b';
 ①单表
 --建表sql
 ![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621174815.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621175542.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623141930.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623142346.png)
 --案例
 ②两表
 --建表sql
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623142620.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623143113.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623144243.png)
 --案例
 ③三表
 --建表sql
+![img](http://qiniu.wsxxg.cn/QQ%E5%9B%BE%E7%89%8720170623144501.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623150943.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623151341.png)
 --案例
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621175542.png)
+
 > * 索引失效（应该避免）
-①
-②
-③
-④
-⑤
-⑥
+--建表
+![img](http://qiniu.wsxxg.cn/QQ%E5%9B%BE%E7%89%8720170616141225.png)
+--案例
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623152851.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623153135.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623153619.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623154017.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623154311.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623154928.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623155206.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623155340.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623160106.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623160235.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623161038.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623162451.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623162708.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623162828.png)
+创建索引
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623163307.png)
+创建索引后，索引失效
+http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623163307.png
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623163832.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623164034.png)
+小总结
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623170556.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623170854.png)
+--面试题讲解
+题目SQL
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623164740.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623164954.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623165202.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623165324.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623165546.png)
+定值、范围还是排序，一般order by是给个范围
+group by基本上都需要进行排序，会有临时表产生
 > * 一般性建议
-①
-②
-③
-④
-⑤
-⑥
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623170014.png)
+## 查询截取分析
+### 查询优化
+> * <font color="#FF0000">永远小标驱动大表</font>，类似嵌套循环Nesred Lopp
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623171740.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623172224.png)
+> * order by关键字优化
+① order by 子句，尽量使用Index方式排序，避免使用FileSort方式哦爱心
+②尽可能在索引列上完成排序操作，遵照索引建的最佳左前缀
+③如果不在索引列上，filesort有两种算法，MySQL就要启动双路排序和单路排序
+④优化策略
+⑤小总结
+![img]()
+![img]()
+![img]()
+![img]()
+### 慢查询日志
+### 批量数据脚本
+### Show profile
+### 全局查询日志
+
+
+
+### 
+### 
+
+
+![img]()
+![img]()
