--- a/_posts/2017-06-20-MySQL高级----索引.md
+++ b/_posts/2017-06-20-MySQL高级----索引.md
@@ -64,11 +64,22 @@ show index from table_name
 
 ## 性能分析
 ### MySQL Query Optimizer
-![img](http://qiniu.wsxxg.cn/QQ%E5%9B%BE%E7%89%8720170620151921.png)
+1、MySQL中有专门负责优化SELECT语句的优化器模块，主要功能：通过计算分析系统中收集到的统计信息，为客户端请求的Query提供他认为最优的执行计划（他认为最优的数据检索方式，但不见得DBA认为是最优的，这部分最耗费时间）
+2、当客户端向MySQL请求一条Query，命令解析器模块完成请求分类，区别出是SELECT并转发给MySQL Query Optimizer时，MySQL Query Optimizer首先会对整条Query进行优化，处理掉一些常量表达式的预算等。然后分析Query中的Hint信息（如果有），看显示Hint信息是否可以完全确定该Query的执行计划。如果没有Hint或Hint信息还不足以完全确定执行计划，则会读取所涉及对象的统计信息，根据Query进行写相应的计算分析，然后再得出最后的执行计划
 ### MySQL常见瓶颈
-![img](http://qiniu.wsxxg.cn/QQ%E5%9B%BE%E7%89%8720170620152149.png)
+CPU：CPU在饱和的时候一般发生在数据装入内存或从磁盘上读取数据的时候，
+IO:	磁盘I/O瓶颈发送在装入数据远大于内存容量的时候
+	服务器硬件的性能瓶颈：top，free，iostat和vmstat来查看系统的性能状态
 ### Explain
-![img](http://qiniu.wsxxg.cn/QQ%E5%9B%BE%E7%89%8720170620152409.png)
+使用EXPLAIN关键字可以模拟优化器执行SQL查询语句，从而知道MySQL是如何处理你的SQL语句的。分析你的查询语句或是表结构的性能瓶颈
+
+能干嘛：
+-->表的读取顺序
+-->数据读取操作的操作类型
+-->那些索引可以使用
+-->那些索引被实际使用
+-->表之间的引用
+-->每张表有多少行被优化器查询
 ![img](http://qiniu.wsxxg.cn/QQ%E5%9B%BE%E7%89%8720170620152845.png)
 
 #### 执行计划包含的信息
