--- a/_posts/2017-06-20-MySQL高级.md
+++ b/_posts/2017-06-20-MySQL高级.md
@@ -182,36 +182,134 @@ insert into `t3` (`id`, `name`, `t2_id`) values('3','王老师','2');
 三种情况
 
  **① id相同，执行顺序由上至下**
+ 
+**执行sql**
+ 
+```sql
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170620154016.png)
+EXPLAIN
+SELECT * 
+FROM t1, t2, t3
+WHERE t1.`id`=t2.`t1_id` AND t2.`id`=t3.`t2_id`
+
+```
+**执行结果**
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711114036.png)
 
 **②id不同，如果是字查询，id的序号会递增，id越大优先级越高，越先被执行**
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170620154226.png)
+**执行sql**
+ 
+```sql
+ 
+EXPLAIN
+SELECT t1.* FROM t1 WHERE t1.`id` = (SELECT t2.`t1_id` FROM t2 WHERE t2.`id` = (SELECT t3.`t2_id` FROM t3 WHERE t3.`id`=1 ))
+
+```
+
+**执行结果**
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711114255.png)
 
 **③id相同不同，同时存在**
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170620154823.png)
+**执行sql**
+
+```sql
+ 
+EXPLAIN
+SELECT t2.* FROM (SELECT t1.`id` FROM t1 WHERE t1.`name`='李四') s1,t2 WHERE s1.id =t2.`t1_id`
+
+```
+**执行结果**
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711114354.png)
 
 **2、select_type 查询类型，主要是用于区别普通查询、联合查询、子查询等复杂的查询**
 
 **① SIMPLE  简单的select查询，查询中不包含子查询或者UNION**
 
+**执行sql**
+
+```sql
+ 
+EXPLAIN
+SELECT *  FROM t1
+
+```
+
+**执行结果**
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711114514.png)
+
 **② PRIMARY  查询中若包含任何复杂的子部分，最外层查询被标记为**
 
 **③ SUBQUERY  在select或where中包含了子查询**
 
+**执行sql**
+
+```sql
+ 
+EXPLAIN
+
+SELECT t1.* FROM t1 WHERE t1.`id` = (SELECT t2.`t1_id` FROM t2 WHERE t2.`id`=1) 
+
+```
+
+**执行结果**
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711114753.png)
+
+
 **④ DERIVED  在from列表中包含的子查询被标记为DERIVED（衍生）MySQL会递归执行这些子查询，把结果放在临时表里**
+
+**执行sql**
+
+```sql
+ 
+EXPLAIN
+
+SELECT s1.* FROM (SELECT t2.* FROM t1,t2 WHERE t1.`id`=t2.`t1_id`) s1 
+
+```
+
+**执行结果**
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711115439.png)
+
 
 **⑤ UNION  若第二个select出现在union之后，则被标记为union；若union包含在from子句查询中，外层select将被标记为：DERIVED**
 
 **⑥ UNION RESULT  从union表中获取结果的select**
 
+**执行sql**
+
+```sql
+ 
+EXPLAIN
+
+SELECT t1.`id`,t1.`name` FROM t1
+UNION
+SELECT t2.`id`,t2.`name` FROM t2
+
+```
+
+**执行结果**
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711115745.png)
+
+
 **3、 table 显示这一行的数据是关于那张表的**
 
 **4、 type 访问类型排列**
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170620160923.png)
+type显示的是访问类型，是较为重要的一个指标，结果值从最好到最坏依次是：
+
+system -> const -> eq_ref -> ref -> fulltext -> ref_or_null -> index_merge -> unique_subquery -> index_subquery -> range -> index ->All
+
+常用
+system -> const -> eq_ref -> ref -> index ->All
 
 ①system 表只有一行记录（等于系统表），这是const类型的特列，平时不会出现，这个也可以忽略不记
 
@@ -229,17 +327,17 @@ insert into `t3` (`id`, `name`, `t2_id`) values('3','王老师','2');
 
 <font color="#FF0000">备注：一般来说，得保证查询至少达到range级别，最好能达到ref</font>
 
-> * possible_keys 显示可能应用在这张表中的索引，一个或多个。查询涉及到的字段上若存在索引，则该索引将被列出，<font color="#FF0000">但不一定被查询实际使用</font>
+**5、 possible_keys 显示可能应用在这张表中的索引，一个或多个。查询涉及到的字段上若存在索引，则该索引将被列出，<font color="#FF0000">但不一定被查询实际使用</font>**
 
-> * key 实际使用的索引。如果为NULL，则没有使用索引。查询中如使用了覆盖索引，则该索引仅出现在key列表中
+**6、 key 实际使用的索引。如果为NULL，则没有使用索引。查询中如使用了覆盖索引，则该索引仅出现在key列表中**
 
-> * key_len 表示索引中使用的字节数，可通过该列计算查询中使用的索引的长度。在不损失精确性的情况下，长度越短越好。key_len显示的值为索引字段的最大可能长度，<font color="#FF0000">并非实际使用长度</font>，即ken_len是根据表定义计算而得，不是通过表内检索出的
+**7、 key_len 表示索引中使用的字节数，可通过该列计算查询中使用的索引的长度。在不损失精确性的情况下，长度越短越好。key_len显示的值为索引字段的最大可能长度，<font color="#FF0000">并非实际使用长度</font>，即ken_len是根据表定义计算而得，不是通过表内检索出的**
 
-> * ref 显示索引的那一列被使用了，如果可能的话，是一个常数。那些列或者常量被用于查找索引列上的值
+**8、 ref 显示索引的那一列被使用了，如果可能的话，是一个常数。那些列或者常量被用于查找索引列上的值**
 
-> * rows 根据表统计信息及索引选用情况，大致估算出找到所需要的记录所需要读取的行数
+**9、 rows 根据表统计信息及索引选用情况，大致估算出找到所需要的记录所需要读取的行数**
 
-> * Extra 包含不合适在其他列中显示但十分重要的额外信息
+**10、 Extra 包含不合适在其他列中显示但十分重要的额外信息**
 
 ① Using filesort 说明MySQL会对数据使用一个外部的索引排序。而不是按照表内的索引顺序进行读取。MySQL中无法利用索引完成的排序操作称为“文件排序”
 
