--- a/_posts/2017-06-20-MySQL高级.md
+++ b/_posts/2017-06-20-MySQL高级.md
@@ -349,7 +349,16 @@ system -> const -> eq_ref -> ref -> index ->All
 
 覆盖索引Covering Index
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621172258.png)
+理解方式一：
+
+就是select的数据列只用索引中的列就能够取到，不必读取数据行，MySQL可以利用索引返回select列表中的字段，而不必更具索引再次读取数据文件，换句话说查询列被建的索引覆盖
+
+理解方式一：
+索引是高效找到行的一个方法，但是一般数据库也能使用索引找到一个列的数据，因此不必读取整个行。毕竟索引叶子节点存储了它们索引的数据；当能通过读取索引就可以得到想要的数据，那就不需要读取行了。一个索引包含了（或覆盖了）满足查询结果的数据就叫覆盖索引。
+
+注意：
+
+如果要使用覆盖索引，一定要注意select列表中只取出需要的列，不可 select * ，因为如果将所有字段一个做索引会导致索引文件过大，查询性能下降。
 
 ④ Using where 表明使用了where过滤
 
@@ -379,15 +388,102 @@ explain select * from t1 where name ='a' and name ='b';
 
 --建表sql
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621174815.png)
+```sql
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170621175542.png)
+create table `article` (
+	`id` int (10),
+	`author_id` int (10),
+	`category_id` int (10),
+	`views` int (10),
+	`comments` int (10),
+	`title` varchar (765),
+	`content` text 
+); 
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623141930.png)
+insert into `article` (`id`, `author_id`, `category_id`, `views`, `comments`, `title`, `content`) values('1','1','1','1','1','1','1');
+insert into `article` (`id`, `author_id`, `category_id`, `views`, `comments`, `title`, `content`) values('2','2','2','2','2','2','2');
+insert into `article` (`id`, `author_id`, `category_id`, `views`, `comments`, `title`, `content`) values('3','1','1','3','3','3','3');
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623142346.png)
+```
 
---案例
+查询category_id为1且comments大于1的情况下，views最多的article_id
+
+```sql
+
+EXPLAIN
+
+SELECT id,author_id FROM article WHERE category_id =1 AND comments>1 ORDER BY views DESC LIMIT 1
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711125954.png)
+
+结果很显然type为All即最坏情况。Extra里还出现了Using filesort也是最坏的情况。优化是必须的
+
+开始优化
+
+1.1、新建索引
+
+```sql
+
+# ALTER TABLE article ADD INDEX idx_article_ccv(category_id,comments,views)
+CREATE INDEX idx_article_ccv ON article (category_id,comments,views)
+
+```
+
+1.2、继续执行SQL
+
+```sql
+
+EXPLAIN
+
+SELECT id,author_id FROM article WHERE category_id =1 AND comments>1 ORDER BY views DESC LIMIT 1
+
+```
+
+结果
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711151311.png)
+
+结论：
+
+type 变成了range这个是可以忍受的。但是extra里使用了Using filesort仍是无法接受的
+但是我们已经建立了索引，为啥没用呢？
+这是因为安装BTree索引的工作原理
+先排序category_id
+如果遇到相同的先排序category_id则再排序comments，如果遇到相同的comments则再排序views
+当comments字段在联合索引里处于中间位置时，因comments>1条件是一个范围（所谓range）
+MYSQL无法利用索引再对后面的views部分进行检索，即range类型查询字段后面的索引无效
+
+1.3、删除第一次建立的索引
+
+```sql
+
+DROP INDEX idx_article_ccv ON article
+
+```
+
+1.4、第二次建立索引
+```sql
+
+#alter table article add index idx_article_cv  (category_id,views)
+
+CREATE INDEX idx_article_cv ON article (category_id,views)
+
+
+```
+
+1.5、继续执行SQL
+
+```sql
+
+EXPLAIN
+
+SELECT id,author_id FROM article WHERE category_id =1 AND comments>1 ORDER BY views DESC LIMIT 1
+
+```
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711151439.png)
+
 
 ②两表
 
