--- a/_posts/2017-06-20-MySQL高级.md
+++ b/_posts/2017-06-20-MySQL高级.md
@@ -386,7 +386,6 @@ explain select * from t1 where name ='a' and name ='b';
 
 ①单表
 
---建表sql
 
 ```sql
 
@@ -487,15 +486,130 @@ SELECT id,author_id FROM article WHERE category_id =1 AND comments>1 ORDER BY vi
 
 ②两表
 
---建表sql
+```sql
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623142620.png)
+# 创建表
+create table `class` (
+	`id` int (10),
+	`card` int (10)
+); 
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623143113.png)
+create table `book` (
+	`book_id` int (10),
+	`card` int (11)
+); 
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623144243.png)
+# 插入数据
+INSERT INTO class(card) VALUES(FLOOR(1+(RAND()*20)));
 
---案例
+```
+
+1.1、开始EXPLAIN分析
+
+```sql
+
+EXPLAIN SELECT * FROM class LEFT JOIN book ON class.`card` =book.`card`
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711153928.png)
+
+结论: type有ALL
+
+1.2、添加索引优化
+
+```sql
+
+ALTER TABLE book ADD INDEX Y(card);
+
+```
+
+1.3、继续EXPLAIN分析
+
+```sql
+
+EXPLAIN SELECT * FROM class LEFT JOIN book ON class.`card` =book.`card`
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711154040.png)
+
+结论：
+
+可以看到第二行的type变为ref，rows也变成了1，优化比较明显
+
+这是由左连接决定的。LEFT JOIN条件用于确定如何从有表搜索行，左边一定都有
+
+所以右边是我们的关键点，一定要建立索引
+
+1.4、删除索引
+
+```sql
+
+DROP INDEX Y ON book
+
+```
+
+1.5、在class上创建索引
+
+```sql
+
+ALTER TABLE class ADD INDEX X(card);
+
+```
+
+1.6、继续执行SQL
+
+```sql
+
+EXPLAIN SELECT * FROM class LEFT JOIN book ON class.`card` =book.`card`;
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711155114.png)
+
+结果
+
+左连接基本无变化
+
+1.7、再来一个右连接查询
+
+```sql
+
+EXPLAIN SELECT * FROM class RIGHT JOIN book ON class.`card` =book.`card`;
+
+```
+
+结果
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711155413.png)
+
+优化比较明显。这是因为RIGHT JOIN条件用于确定如何从左表搜索行，右边一定都有，所以左边是我们的关键点，一定需要建立索引
+
+1.8、删除class上的索引，在book上建立索引
+
+```sql
+
+DROP INDEX X ON class;
+
+ALTER TABLE book ADD INDEX Y(card);
+
+
+```
+
+1.9、执行右连接SQL
+
+```sql
+
+EXPLAIN SELECT * FROM class RIGHT JOIN book ON class.`card` =book.`card`;
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711160008.png)
+
+结果：
+
+右连接基本无变化
 
 ③三表
 
