--- a/_posts/2017-06-20-MySQL高级.md
+++ b/_posts/2017-06-20-MySQL高级.md
@@ -613,69 +613,387 @@ EXPLAIN SELECT * FROM class RIGHT JOIN book ON class.`card` =book.`card`;
 
 ③三表
 
---建表sql
+```sql
 
-![img](http://qiniu.wsxxg.cn/QQ%E5%9B%BE%E7%89%8720170623144501.png)
+CREATE TABLE `phone` (
+	`phone_id` INT (10),
+	`card` INT (11)
+); 
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623150943.png)
+INSERT INTO phone(card) VALUES(FLOOR(1+(RAND()*20)));
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623151341.png)
+# 创建索引
+ALTER TABLE phone ADD INDEX z(card);
 
---案例
+ALTER TABLE book ADD INDEX Y(card);  # 上一个case建过一个同样的
+
+```
+
+1.1、开始EXPLAIN分析
+
+```sql
+
+EXPLAIN SELECT * FROM class LEFT JOIN book ON class.`card` =book.`card` LEFT JOIN phone ON book.`card` =phone.`card`;
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711161641.png)
+
+结果：
+
+后2行的type都是ref切总rows优化很好，效果不错。隐藏索引最好设置在经常查询的字段中
+
+结论:
+
+JOIN语句的优化
+
+尽可能减少Join语句中的NestedLoop的循环总次数：“永远用小结果渠道大的结果集”
+
+优先优化NestedLoop的内层循环
+
+保证Join语句中被驱动表上Join条件字段已被索引
+
+当无法保证被驱动表的Join条件字段被索引且内存自营充足的前提下，不要太吝啬JoinBuffer的设置
+
 
 > * 索引失效（应该避免）
 
---建表
+```sql
 
-![img](http://qiniu.wsxxg.cn/QQ%E5%9B%BE%E7%89%8720170616141225.png)
+# 建表
+create table `staffs` (
+	`id` int (10),
+	`name` varchar (72),
+	`age` int (11),
+	`pos` varchar (60),
+	`add_time` timestamp 
+); 
+
+# 插入数据
+INSERT INTO `staffs`(NAME,age,pos,add_time) VALUES ('zs',22,'manager',NOW());
+
+INSERT INTO `staffs`(NAME,age,pos,add_time) VALUES ('July',23,'dev',NOW());
+
+INSERT INTO `staffs`(NAME,age,pos,add_time) VALUES ('2000',23,'dev',NOW());
+
+# 创建索引
+
+ALTER TABLE staffs ADD INDEX idx_staffs_nameAgePos(NAME,age,pos);
+
+```
+
+1、全值匹配我最爱
+
+2、最佳左前缀法则
+
+3、不在索引列上做任何操作（计算、函数、（自动or手动）类型转换），会导致索引失效而转向全表扫描
+
+4、存储引擎不能使用索引中范围条件右边的列
+
+5、尽量使用覆盖索引（只访问索引的查询（索引类和查询列一致）），减少select *
+
+6、mysql在使用不等于（!=或者<>）的时候无法使用索引会导致全表扫描
+
+7、is null，is not null也无法使用索引
+
+8、like以通配符开头（'%abs...'）mysql索引失效会变成全表扫描的操作
+
+9、字符串不加单引号索引失效
+
+10、少用or，用它来连接时会索引失效
 
 --案例
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623152851.png)
+1、全值匹配我最爱
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623153135.png)
+```sql
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623153619.png)
+EXPLAIN
+SELECT * FROM staffs WHERE NAME ='July'
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623154017.png)
+```
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623154311.png)
+结果：
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711165020.png)
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623154928.png)
+```sql
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623155206.png)
+EXPLAIN
+SELECT * FROM staffs WHERE NAME ='July' AND age =23
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623155340.png)
+```
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623160106.png)
+结果：
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711165133.png)
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623160235.png)
+```sql
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623161038.png)
+EXPLAIN
+SELECT * FROM staffs WHERE NAME ='July' AND age =23 AND pos ='dev'
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623162451.png)
+```
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623162708.png)
+结果：
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711165241.png)
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623162828.png)
+2、最佳左前缀法则
 
-创建索引
+如果索引了多列，要遵守最左前缀法则，指的是查询重索引最左前列开始并且不跳过索引中的列。
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623163307.png)
+```sql
 
-创建索引后，索引失效
+EXPLAIN
+SELECT * FROM staffs WHERE age =23 AND pos ='dev'
 
-http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623163307.png
+```
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623163832.png)
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711165744.png)
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623164034.png)
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE pos ='dev'
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711165854.png)
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME ='July'  
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711170111.png)
+
+3、不在索引列上做任何操作（计算、函数、（自动or手动）类型转换），会导致索引实现而转向全表扫描
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE LEFT(NAME,4) ='July'  
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711170447.png)
+
+4、存储引擎不能使用索引中范围条件右边的列
+
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME ='zs'  
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711171040.png)
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME ='zs' AND age =22
+
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711171203.png)
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME ='zs' AND age =22 AND pos ='manager'
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711171246.png)
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME ='zs' AND age >11 AND pos ='manager'
+
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711171353.png)
+
+5、尽量使用覆盖索引（只访问索引的查询（索引类和查询列一致）），减少select *
+
+```sql
+
+EXPLAIN
+SELECT NAME,age,pos FROM staffs WHERE NAME ='zs' AND age =22 AND pos ='manager'
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711172042.png)
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME ='zs' AND age =22 AND pos ='manager'
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711171908.png)
+
+```sql
+
+EXPLAIN
+SELECT NAME,age,pos FROM staffs WHERE NAME ='zs' AND age > 25 AND pos ='manager'
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711172217.png)
+
+```sql
+
+EXPLAIN
+SELECT NAME,age,pos FROM staffs WHERE NAME ='zs' AND age = 22
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711172324.png)
+
+```sql
+
+EXPLAIN
+SELECT NAME FROM staffs WHERE NAME ='zs' AND age = 22
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711172513.png)
+
+6、mysql在使用不等于（!=或者<>）的时候无法使用索引会导致全表扫描
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME ='July'
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711173036.png)
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME !='July'
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711173134.png)
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME <> 'July'
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711173223.png)
+
+7、is null，is not null也无法使用索引
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME IS NULL
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711173436.png)
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME IS NOT NULL
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711173520.png)
+
+8、like以通配符开头（'%abs...'）mysql索引失效会变成全表扫描的操作
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME = 'July'; 
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711173713.png)
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME LIKE '%July%'; 
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711173814.png)
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME LIKE '%July'; 
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711173902.png)
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME LIKE 'July%'; 
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711173949.png)
+
+
+9、字符串不加单引号索引失效
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME =111; 
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711174221.png)
+
+
+10、少用or，用它来连接时会索引失效
+
+```sql
+
+EXPLAIN
+SELECT * FROM staffs WHERE NAME = 'July' or NAME ='zs'; 
+
+```
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170711174941.png)
 
 小总结
 
 ![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623170556.png)
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623170854.png)
+**优化总结口诀**
+
+全值匹配我最爱，最左前缀要遵守。
+
+带头大哥不能死，中间兄弟不能断。
+
+索引列上少计算，范围之后全失效。
+
+LIKE百分写最后，覆盖索引不用星。
+
+不等空值还有or，索引失效要少用。
+
+ VAR 引号不可丢，SQL高效也不难。
 
 --面试题讲解
 
