--- a/_posts/2017-06-20-MySQL高级.md
+++ b/_posts/2017-06-20-MySQL高级.md
@@ -999,15 +999,140 @@ LIKE百分写最后，覆盖索引不用星。
 
 题目SQL
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623164740.png)
+```sql
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623164954.png)
+CREATE TABLE test01 (
+id INT PRIMARY KEY NOT NULL AUTO_INCREMENT,
+c1 CHAR(10),
+c2 CHAR(10),
+c3 CHAR(10),
+c4 CHAR(10),
+c5 CHAR(10)
+);
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623165202.png)
+INSERT INTO test01 (c1,c2,c3,c4,c5) VALUES ('a1','a2','a3','a4','a5');
+INSERT INTO test01 (c1,c2,c3,c4,c5) VALUES ('b1','b2','b3','b4','b5');
+INSERT INTO test01 (c1,c2,c3,c4,c5) VALUES ('c1','c2','c3','c4','c5');
+INSERT INTO test01 (c1,c2,c3,c4,c5) VALUES ('d1','d2','d3','d4','d5');
+INSERT INTO test01 (c1,c2,c3,c4,c5) VALUES ('e1','e2','e3','e4','e5');
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623165324.png)
+SELECT * FROM test01;
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623165546.png)
+# 创建索引
+
+CREATE INDEX idx_test01_c1234 ON test01(c1,c2,c3,c4);
+
+SHOW INDEX FROM test01;
+
+```
+
+问题：我们创建了复合索引idx_test01_c1234，根据一下sql分享索引使用情况
+
+```sql
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1';
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2';
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' AND c3='a3';
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' AND c3='a3' AND c4='a4';
+
+```
+
+1）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' AND c3='a3' AND c4='a4';
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714101143.png)
+
+2）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' AND c4='a4' AND c3='a3';
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714101550.png)
+
+3）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' AND c3 >'a3' AND c4='a4';
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714103451.png)
+
+4）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' AND c4 >'a4' AND c3='a3';
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714103534.png)
+
+5）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' AND c4 ='a4' ORDER BY c3 ;
+
+c3的作用在排序而不是查找
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714103814.png)
+
+6）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' ORDER BY c3 ;
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714103945.png)
+
+7）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' ORDER BY c4 ;
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714104108.png)
+
+出现了filesort
+
+8）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c5 ='a5' ORDER BY c2,c3 ;
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714104519.png)
+
+只用一个c1字段索引，但是c2，c3用于排序，无filesort
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c5 ='a5' ORDER BY c3,c2 ;
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714104812.png)
+
+出现了filesort,我们建的索引是1234，他没有按照顺序来，3、2颠倒了
+
+9）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' ORDER BY c2,c3 ;
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714105128.png)
+
+10）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' AND c5='c5' ORDER BY c2,c3 ;
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714105256.png)
+
+用c1、c2两个字段索引，但是c2、c3用于排序无filesort
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c2 ='a2' AND c5='c5' ORDER BY c3,c2 ;
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714105639.png)
+
+本例有常量c2的情况，和8.2对比
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c5 ='a5' ORDER BY c3,c2 ;  filesort
+
+11）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c4 ='a4' GROUP BY c2,c3 ;
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714105843.png)
+
+12）、执行 
+
+EXPLAIN SELECT * FROM test01 WHERE c1='a1' AND c4 ='a4' GROUP BY c3,c2 ;
+
+![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170714110033.png)
 
 定值、范围还是排序，一般order by是给个范围
 
@@ -1015,7 +1140,13 @@ group by基本上都需要进行排序，会有临时表产生
 
 > * 一般性建议
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623170014.png)
+对于单键索引，尽量选择针对当前query过滤性更好的索引
+
+在选择组合索引的时候，当query中过滤性最好的字段在索引字段顺序中，位置越靠前越好
+
+在选择组合索引的时候，进来选择可以能够包含当前query中的where字句中更多字段的索引
+
+尽可能通过分析统计信息和调整query的下方来达到选择合适的索引的目的
 
 ## 查询截取分析
 
@@ -1023,9 +1154,41 @@ group by基本上都需要进行排序，会有临时表产生
 
 > * <font color="#FF0000">永远小标驱动大表</font>，类似嵌套循环Nesred Lopp
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623171740.png)
+select * from A where id in (select id from B)
 
-![img](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170623172224.png)
+等价于
+
+for select id from B
+
+for select * from A where A.id = B.id 
+
+当B表的数据集必须小于A表数据集时，用in由于exists。
+
+select * from A where exists ( select 1 from B where B.id = A.id)
+
+等价于
+
+for select * from A
+
+for select * from B where B.id = A.id
+
+当A表的数据集小于B表的数据集时，用exists优于in
+
+注意：A表于B表的ID字段应建立索引
+
+**exists**
+
+select ... from table where exists(subquery)
+
+该语法可以理解为：将主查询的数据，放到子查询中做条件验证，根据验证结果（true和false）来决定主查询的数据结果是否得以保留
+
+提示：
+
+1、exists(subquery)只返回true或者false，因此子查询中的select * 也可以是 select 1 或者 select 'x' ，官方说法是实际执行时会忽略select清单，因此没有区别
+
+2、exists子查询的实际执行过程可能经过了优化而不是我们理解上的逐条对比，如果担忧效率问题，可进行实际检验以确认是否有效率问题
+
+3、exists子查询往往也可以用条件表达式、其他子查询或者Join来替代，何种最优需要具体问题具体分析
 
 > * order by关键字优化
 
