新增sql删除重复name并保留id最小的1条数据

--- a/_posts/2017-07-05-JAVA总结.md
+++ b/_posts/2017-07-05-JAVA总结.md
@@ -768,6 +768,11 @@ MyBatis底层就是JDBC   所以他的核心就是配置文件  ：
 
 ## SQL
 
+删除mysql数据库中名称重复的数据并保留id为最小的1条
+
+DELETE FROM people WHERE id NOT IN (SELECT minid FROM (SELECT MIN(id) AS minid FROM people GROUP BY name) b);
+
+
 ### 行转列
 
 ###  MySQL存储引擎－ MyISAM与InnoDB区别
