--- a/_posts/2017-08-07-JAVA多线程.md
+++ b/_posts/2017-08-07-JAVA多线程.md
@@ -51,9 +51,13 @@ public class MyThread extends Thread{
 执行结果：
 
 t1 count = 2
+
 t3 count = 2
+
 t4 count = 0
+
 t5 count = 1
+
 t2 count = 2
 
 在第16行 run方法上加锁，改为：
@@ -71,7 +75,132 @@ t2 count = 2
 执行结果：
 
 t1 count = 4
+
 t3 count = 3
+
 t2 count = 2
+
 t4 count = 1
+
 t5 count = 0
+
+
+
+### 多个线程多个锁
+
+![cmd-markdown-logo](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170807111030.png)
+
+```java
+
+package com.bjsxt.base.sync002;
+/**
+ * 关键字synchronized取得的锁都是对象锁，而不是把一段代码（方法）当做锁，
+ * 所以代码中哪个线程先执行synchronized关键字的方法，哪个线程就持有该方法所属对象的锁（Lock），
+ * 
+ * 在静态方法上加synchronized关键字，表示锁定.class类，类一级别的锁（独占.class类）。
+ * @author alienware
+ *
+ */
+public class MultiThread {
+
+	private int num = 0;
+	
+	/** static */
+	public synchronized void printNum(String tag){
+		try {
+			
+			if(tag.equals("a")){
+				num = 100;
+				System.out.println("tag a, set num over!");
+				Thread.sleep(1000);
+			} else {
+				num = 200;
+				System.out.println("tag b, set num over!");
+			}
+			
+			System.out.println("tag " + tag + ", num = " + num);
+			
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}
+	}
+	
+	//注意观察run方法输出顺序
+	public static void main(String[] args) {
+		
+		//俩个不同的对象
+		final MultiThread m1 = new MultiThread();
+		final MultiThread m2 = new MultiThread();
+		
+		Thread t1 = new Thread(new Runnable() {
+			@Override
+			public void run() {
+				m1.printNum("a");
+			}
+		});
+		
+		Thread t2 = new Thread(new Runnable() {
+			@Override 
+			public void run() {
+				m2.printNum("b");
+			}
+		});		
+		
+		t1.start();
+		t2.start();
+		
+	}
+	
+	
+	
+	
+}
+
+
+```
+
+
+执行结果：
+
+tag b, set num over!
+tag a, set num over!
+tag b, num = 200
+tag a, num = 100
+
+在第12行和15行加static，改为：
+
+```java
+private static int num = 0;
+	
+	/** static */
+	public static synchronized void printNum(String tag){
+		try {
+			
+			if(tag.equals("a")){
+				num = 100;
+				System.out.println("tag a, set num over!");
+				Thread.sleep(1000);
+			} else {
+				num = 200;
+				System.out.println("tag b, set num over!");
+			}
+			
+			System.out.println("tag " + tag + ", num = " + num);
+			
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}
+	}
+
+```
+
+
+执行结果：
+
+tag a, set num over!
+
+tag a, num = 100
+
+tag b, set num over!
+
+tag b, num = 200
