--- a/_posts/2017-08-07-JAVA多线程.md
+++ b/_posts/2017-08-07-JAVA多线程.md
@@ -86,7 +86,7 @@ t5 count = 0
 
 
 
-### 多个线程多个锁
+### 1.2 多个线程多个锁
 
 ![cmd-markdown-logo](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170807111030.png)
 
@@ -163,8 +163,11 @@ public class MultiThread {
 执行结果：
 
 tag b, set num over!
+
 tag a, set num over!
+
 tag b, num = 200
+
 tag a, num = 100
 
 在第12行和15行加static，改为：
@@ -204,3 +207,180 @@ tag a, num = 100
 tag b, set num over!
 
 tag b, num = 200
+
+### 1.3 对象锁的同步异步
+
+![cmd-markdown-logo](http://qiniu.wsxxg.cn/QQ%E5%9B%BE%E7%89%8720170807112446.png)
+
+```java
+
+package com.bjsxt.base.sync003;
+
+/**
+ * 对象锁的同步和异步问题
+ * @author alienware
+ *
+ */
+public class MyObject {
+
+	public synchronized void method1(){
+		try {
+			System.out.println(Thread.currentThread().getName());
+			Thread.sleep(4000);
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}
+	}
+	
+	/** synchronized */
+	public void method2(){
+			System.out.println(Thread.currentThread().getName());
+	}
+	
+	public static void main(String[] args) {
+		
+		final MyObject mo = new MyObject();
+		
+		/**
+		 * 分析：
+		 * t1线程先持有object对象的Lock锁，t2线程可以以异步的方式调用对象中的非synchronized修饰的方法
+		 * t1线程先持有object对象的Lock锁，t2线程如果在这个时候调用对象中的同步（synchronized）方法则需等待，也就是同步
+		 */
+		Thread t1 = new Thread(new Runnable() {
+			@Override
+			public void run() {
+				mo.method1();
+			}
+		},"t1");
+		
+		Thread t2 = new Thread(new Runnable() {
+			@Override
+			public void run() {
+				mo.method2();
+			}
+		},"t2");
+		
+		t1.start();
+		t2.start();
+		
+	}
+	
+}
+
+
+
+
+```
+
+
+执行结果：
+
+t1
+
+t2
+
+t1、t2基本同时执行，程序4秒后结束。
+
+代码20行method2加同步后：
+
+```java
+
+	public synchronized void method2(){
+			System.out.println(Thread.currentThread().getName());
+	}
+
+```
+
+
+执行结果：
+
+t1
+
+4秒后打印
+
+t2
+
+
+### 1.4 脏读
+
+![cmd-markdown-logo](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20170807113300.png)
+
+```java
+
+package com.bjsxt.base.sync004;
+/**
+ * 业务整体需要使用完整的synchronized，保持业务的原子性。
+ * @author alienware
+ *
+ */
+public class DirtyRead {
+
+	private String username = "bjsxt";
+	private String password = "123";
+	
+	public synchronized void setValue(String username, String password){
+		this.username = username;
+		
+		try {
+			Thread.sleep(2000);
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}
+		
+		this.password = password;
+		
+		System.out.println("setValue最终结果：username = " + username + " , password = " + password);
+	}
+	
+	public void getValue(){
+		System.out.println("getValue方法得到：username = " + this.username + " , password = " + this.password);
+	}
+	
+	
+	public static void main(String[] args) throws Exception{
+		
+		final DirtyRead dr = new DirtyRead();
+		Thread t1 = new Thread(new Runnable() {
+			@Override
+			public void run() {
+				dr.setValue("z3", "456");		
+			}
+		});
+		t1.start();
+		Thread.sleep(1000);
+		
+		dr.getValue();
+	}
+	
+	
+	
+}
+
+
+
+```
+
+
+执行结果：
+
+getValue方法得到：username = z3 , password = 123
+
+setValue最终结果：username = z3 , password = 456
+
+代码26行getValue加同步后：
+
+```java
+
+	public synchronized void getValue(){
+		System.out.println("getValue方法得到：username = " + this.username + " , password = " + this.password);
+	}
+
+```
+
+
+执行结果：
+
+setValue最终结果：username = z3 , password = 456
+
+getValue方法得到：username = z3 , password = 456
+
