--- a/_posts/2017-08-07-JAVA多线程（一）.md
+++ b/_posts/2017-08-07-JAVA多线程（一）.md
@@ -913,6 +913,87 @@ public class DeadLock implements Runnable{
 t2进入后发生死锁。
 
 
+### 1.7 volatile关键字
+
+![cmd-markdown-logo](http://qiniu.wsxxg.cn/QQ%E5%9B%BE%E7%89%8720170807123101.png)
+
+```java
+
+package com.bjsxt.base.sync007;
+
+public class RunThread extends Thread{
+
+	private boolean isRunning = true;
+	private void setRunning(boolean isRunning){
+		this.isRunning = isRunning;
+	}
+	
+	public void run(){
+		System.out.println("进入run方法..");
+		while(isRunning == true){
+			//..
+		}
+		System.out.println("线程停止");
+	}
+	
+	public static void main(String[] args) throws InterruptedException {
+		RunThread rt = new RunThread();
+		rt.start();
+		Thread.sleep(3000);
+		rt.setRunning(false);
+		System.out.println("isRunning的值已经被设置了false");
+		Thread.sleep(1000);
+		System.out.println("isRunning的值 :"+rt.isRunning);
+		
+	}
+	
+}
+
+
+
+```
+
+执行结果：
+
+进入run方法..
+
+isRunning的值已经被设置了false
+
+isRunning的值 :false
+
+
+程序一直没有结束。。。
+
+修改第5行代码,添加volatile关键字
+
+```java
+
+private volatile boolean isRunning = true;
+
+```
+
+执行结果：
+
+进入run方法..
+
+isRunning的值已经被设置了false
+
+线程停止
+
+isRunning的值 :false
+
+程序可以正常运行结束。
+
+
+
+
+
+
+
+
+
+
+
 
 
 
