volatile的非原子性

--- a/_posts/2017-08-07-JAVA多线程（一）.md
+++ b/_posts/2017-08-07-JAVA多线程（一）.md
@@ -986,7 +986,159 @@ isRunning的值 :false
 
 
 
+#### volatile 非原子性
 
+
+```java
+
+package com.bjsxt.base.sync007;
+
+import java.util.concurrent.atomic.AtomicInteger;
+
+/**
+ * volatile关键字不具备synchronized关键字的原子性（同步）
+ * @author alienware
+ *
+ */
+public class VolatileNoAtomic extends Thread{
+	private static volatile int count;
+	//private static AtomicInteger count = new AtomicInteger(0);
+	private static void addCount(){
+		for (int i = 0; i < 1000; i++) {
+			count++ ;
+			//count.incrementAndGet();
+		}
+		System.out.println(count);
+	}
+	
+	public void run(){
+		addCount();
+	}
+	
+	public static void main(String[] args) {
+		// 结果最后打印应该是10000
+		VolatileNoAtomic[] arr = new VolatileNoAtomic[100];
+		for (int i = 0; i < 10; i++) {
+			arr[i] = new VolatileNoAtomic();
+		}
+		
+		for (int i = 0; i < 10; i++) {
+			arr[i].start();
+		}
+	}
+	
+}
+
+
+```
+
+
+执行结果：
+
+1927
+
+3768
+
+2023
+
+2768
+
+5347
+
+6606
+
+7274
+
+7782
+
+8203
+
+9203
+
+
+使用原子操作需要用Atomic类，第11行和第15行注释掉，第12行和第16行注释打开。
+
+
+执行结果：
+
+3586
+
+4595
+
+5220
+
+5559
+
+5764
+
+6000
+
+7877
+
+8409
+
+9454
+
+10000
+
+
+Atomic类只保证本身方法的原子性，并不保证多次操作的原子性
+
+``` java
+
+package com.bjsxt.base.sync007;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
+
+public class AtomicUse {
+
+	private static AtomicInteger count = new AtomicInteger(0);
+	
+	//多个addAndGet在一个方法内是非原子性的，需要加synchronized进行修饰，保证4个addAndGet整体原子性
+	/**synchronized*/
+	public synchronized int multiAdd(){   // 此处不加synchronized，会出现非原子性操作，每次结果会出现不是整10的结果
+			try {
+				Thread.sleep(100);
+			} catch (InterruptedException e) {
+				e.printStackTrace();
+			}
+			count.addAndGet(1);
+			count.addAndGet(2);
+			count.addAndGet(3);
+			count.addAndGet(4); //+10
+			return count.get();
+	}
+	
+	
+	public static void main(String[] args) {
+		
+		final AtomicUse au = new AtomicUse();
+
+		List<Thread> ts = new ArrayList<Thread>();
+		for (int i = 0; i < 100; i++) {
+			ts.add(new Thread(new Runnable() {
+				@Override
+				public void run() {
+					System.out.println(au.multiAdd());
+				}
+			}));
+		}
+
+		for(Thread t : ts){
+			t.start();
+		}
+
+
+	
+		
+
+		
+	}
+}
+
+```
 
 
 
