测试图片是否显示

--- a/_posts/2018-04-15-第1课 数组与内存控制--突破程序员基本功的16课.md
+++ b/_posts/2018-04-15-第1课 数组与内存控制--突破程序员基本功的16课.md
@@ -55,7 +55,7 @@ public class ArrayTest {
 
 ```
 
-![1.1](https://github.com/zm47726151/N35N/blob/master/imgs/20180415174030.png)
+![1.1](/images/posts/article/20180415174030.png)
 
 从图1.1中可以看出，对于静态初始化方式而言，程序员无需指定数组长度，指定该数组的数组元素，由系统来决定该数组的长度即可。
 
