--- a/_posts/2019/2019-11-20-docker.md
+++ b/_posts/2019/2019-11-20-docker.md
@@ -231,23 +231,62 @@ docker cp c1:/root/2.txt /root
 docker run -id --name=c4 -v /opt/:/usr/local/myhtml centos /bin/bash
 ```
 
+##### docker commit制作镜像
+
+```shell
+# 先启动mycentos容器
+docker start myscentos
+# 将mycentos容器制作成mytomcat镜像
+docker commit myscentos mytomcat
+#创建容器
+docker run -itd -name t1 -p 8888:8080 mytomcat /bin/bash
+# 启动容器里的tomcat
+docker exec t1 /usr/local/apache-tomcat/bin/startup.sh
+```
+
+##### docker 镜像打包
+
+```she
+docker save -o /root/mytomcat.tar mytomcat
+```
+
+##### 将打包镜像上传到其他服务器
+
+```shell
+# 将mytomcat.tar 上传到192.168.1.1的root目录下
+scp  mytomcat.tar 192.168.1.2:/root 
+```
+
+##### 导入镜像
+
+```shell
+# 
+docker load -i /root/mytomcat.tar
+```
+
+##### 容器打包
+
+```shell
+docker export -o /root/t1.rar t1
+```
+
+##### 导入容器
+
+```shell
+docker import t1.rar mytomcat:laster
+```
 
 
 
 
 
+自定义网络
 
+![自定义网络](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20191121234137.png)
 
+容器间通信
 
-
-
-
-
-
-
-
-
-
+![容器间通信](http://qiniu.wsxxg.cn/QQ%E6%88%AA%E5%9B%BE20191121234400.png)
 
 
 
